--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
   </p>
 
   <div class="caption">
+    <img class="centered myImg" src="img/sharpie-eye.png" alt="Drawing of a Grey Cat" />
+    <div>Name: Eye <br /> Medium: Sharpies, and acrilic paint <br /> Date: Unknown</div>
+  </div>
+
+  <div class="caption">
     <img class="centered myImg" src="img/blue-cat.png" alt="Drawing of a Grey Cat" />
     <div>Name: Grey Cat <br /> Medium: Digital <br /> Date: 2/25/18</div>
   </div>
