--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, etc. My artwork will be organized by my oldest at the bottom and my latest at the top.
   </p>
 
+
+    <div class="caption">
+      <img class="centered myImg" src="img/spock-cat.png" alt="Drawing of a Spock as a Cat" />
+      <div>Name: Spock as a cat <br /> Medium: Digital <br /> Date: 2/29/18</div>
+    </div>
+
   <div class="caption">
-    <img class="centered myImg" src="img/sharpie-eye.png" alt="Drawing of a Grey Cat" />
+    <img class="centered myImg" src="img/sharpie-eye.png" alt="Drawing of a Eye" />
     <div>Name: Eye <br /> Medium: Sharpies, and acrilic paint <br /> Date: Unknown</div>
   </div>
 
