--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="icon.png"
   <meta charset="UTF-8">
-  <title>My Art Portfolio</title>
+  <title>Serendipity Art</title>
   <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
   <h1>My art portfolio</h1>
 
-  <p>By: Lyela</p>
+  <p>By: Lyela Serendipity</p>
 
   <h2>Introduction</h2>
 
@@ -175,7 +175,7 @@ span.onclick = function() {
 </script>
 
 <p>
-Copyright &copy;Lyela 2018
+&copy; 2018 Serendipity Art, All rights reserved.
 </p>
 </body>
 
