--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" href="icon.png"
+  <link rel="icon" href="img/logo5.png">
   <meta charset="UTF-8">
   <title>Serendipity Art</title>
   <link rel="icon" href="img/icon.png">
