--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, etc. My artwork will be organized by my oldest at the bottom and my latest at the top.
   </p>
 
+  <div class="caption">
+    <img class="centered myImg" src="img/luke-catwalker.png" alt="Drawing of a Luke Skywalker as a Cat" />
+    <div>Name: Luke Catwalker <br /> Medium: Digital <br /> Date: 2/29/18</div>
+  </div>
+
 
     <div class="caption">
       <img class="centered myImg" src="img/spock-cat.png" alt="Drawing of a Spock as a Cat" />
-      <div>Name: Spock as a cat <br /> Medium: Digital <br /> Date: 2/29/18</div>
+      <div>Name: Spock as a Cat <br /> Medium: Digital <br /> Date: 2/29/18</div>
     </div>
 
   <div class="caption">
