--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h2>Introduction</h2>
 
   <p>
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, etc. My artwork will be organized by my oldest at the bottom and my latest at the top.
+    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, and digital art. My artwork will be organized by my oldest at the bottom and my latest at the top.
   </p>
 
   <div class="caption">
