--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <meta charset="UTF-8">
   <title>Serendipity Art</title>
   <link rel="icon" href="img/icon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <h1>My Art Portfolio</h1>
+<h1>My Art Portfolio</h1>
 
-  <p>By: Lyela Serendipity</p>
+<p>By: Lyela Serendipity</p>
+
 
   <h2>Introduction</h2>
 
@@ -179,9 +182,20 @@ span.onclick = function() {
 }
 </script>
 
+
 <p>
 &copy; 2018 Serendipity Art, All rights reserved.
 </p>
+
+
+
+<img style="float: left; margin-left: 600px; margin-bottom: 30px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
+
+<p style="float: left; margin-left: 20px; text-align: left;">
+<i id="youtube-play" class="fa fa-youtube-play"></i> <a href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true">Check out my YouTube Channel!</a> <br /> <br />
+<i id="git-hub" class="fa fa-github"></i> <a href="https://github.com/NerdyKittyProgrammer"> Check out my GitHub!</a>
+</p>
+
 </body>
 
 </html>
