--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="img/logo5.png">
   <meta charset="UTF-8">
   <title>Serendipity Art</title>
   <link rel="icon" href="img/icon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -189,8 +192,8 @@ span.onclick = function() {
 <img style="float: left; margin-left: 600px; margin-bottom: 30px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
 
 <p style="float: left; margin-left: 20px; text-align: left;">
-<i id="youtube-play" class="fa fa-youtube-play"></i> <a href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true">Check out my YouTube Channel!</a> <br /> <br />
-<i id="git-hub" class="fa fa-github"></i> <a href="https://github.com/NerdyKittyProgrammer"> Check out my GitHub!</a>
+<i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true">Check out my YouTube Channel!</a> <br /> <br />
+<i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer"> Check out my GitHub!</a>
 </p>
 
 </body>
