copyright position bottom

--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/lucas.png" alt="Drawing of Lucas" />
-    <div>Name: Lucas (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/25/17</div>
+    <div>Name: Lucas (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/25/17</div>
   </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/dustin.png" alt="Drawing of Dustin" />
-    <div>Name: Dustin (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/19/17</div>
+    <div>Name: Dustin (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/19/17</div>
   </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie" />
-    <div>Name: Mike with Walkie Talkie (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/16/17</div>
+    <div>Name: Mike with Walkie Talkie (Stranger Things) <br /> Medium: Copic Markers <br />  Date: 12/16/17</div>
   </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/barb.png" alt="Drawing of Barb" />
-    <div>Name: Barb (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/10/17</div>
+    <div>Name: Barb (Stranger Things) <br /> Medium: Copic Markers <br />  Date: 12/10/17</div>
   </div>
 
   <div class="caption">
@@ -142,7 +142,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/mike1.png" alt="Drawing of Mike Wheeler" />
-    <div>Name: Mike (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/10/17</div>
+    <div>Name: Mike (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <!-- The Modal -->
@@ -182,18 +182,15 @@ span.onclick = function() {
 }
 </script>
 
+<img style="float: left; margin-left: 600px; margin-bottom: 35px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
 
-<p>
-&copy; 2018 Serendipity Art, All rights reserved.
-</p>
-
-
-
-<img style="float: left; margin-left: 600px; margin-bottom: 30px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
-
-<p style="float: left; margin-left: 20px; text-align: left;">
+<p style="float: left; margin-left: 20px; text-align: left; margin-top: 30px;">
 <i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true">Check out my YouTube Channel!</a> <br /> <br />
 <i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer"> Check out my GitHub!</a>
+</p>
+
+<p style="float: left; margin-left: 620px;">
+&copy; 2018 Serendipity Art, All rights reserved.
 </p>
 
 </body>
