--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@ span.onclick = function() {
 <img style="float: left; margin-left: 550px; margin-bottom: 10px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
 
 <p style="float: left; margin-left: 20px; text-align: left; margin-top: 30px;">
-<i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true">Check out my YouTube Channel!</a> <br /> <br />
-<i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer"> Check out my GitHub!</a>
+<i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
+<i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
 </p>
 
 <p style="float: left; margin-left: 620px;">
