--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/bubbles.png" alt="Drawing of Bubbles" />
-    <div>Name: Bubbles <br /> Medium: Prismacolor Colored Pencils <br /> Date: 1/25/18</div>
+    <div>Name: Bubbles <br /> Medium: Colored Pencils <br /> Date: 1/25/18</div>
   </div>
 
   <div class="caption">
@@ -92,7 +92,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/girl-portrait.png" alt="Drawing of a Girl in a sweater" />
-    <div>Name: A Girl with a Sweater <br /> Medium: Copic Markers, Prismacolor Colored Pencils <br /> Date: 1/5/18</div>
+    <div>Name: A Girl in a Sweater <br /> Medium: Copic Markers, Colored Pencils <br /> Date: 1/5/18</div>
   </div>
 
   <div class="caption">
@@ -137,7 +137,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/eleven1.png" alt="Drawing of Eleven" />
-    <div>Name: Eleven (Stranger Things) <br /> Medium: Copic Markers <br /> Size: 10" x 8 1/2" <br /> Date: 12/10/17</div>
+    <div>Name: Eleven (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <div class="caption">
