--- a/index.html
+++ b/index.html
@@ -182,14 +182,16 @@ span.onclick = function() {
 }
 </script>
 
-<img style="float: left; margin-left: 550px; margin-bottom: 10px;" class="centered myImg" src="img/logo5.png" alt="Logo" />
+<footer>
+<img style="float: left; margin-left: 10%; margin-bottom: 5%;" class="centered myImg" src="img/logo5.png" alt="Logo" />
 
-<p style="float: left; margin-left: 20px; text-align: left; margin-top: 30px;">
+<p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
 <i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
 <i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
 </p>
+</footer>
 
-<p style="float: left; margin-left: 620px;">
+<p style="float: left; margin-left: 20%;">
 &copy; 2018 Serendipity Art, All rights reserved.
 </p>
 
