--- a/index.html
+++ b/index.html
@@ -4,34 +4,13 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" href="img/logo5.png">
   <meta charset="UTF-8">
   <title>Serendipity Art</title>
-  <link rel="icon" href="img/icon.png">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link rel="icon" href="img/logo5.png">
 </head>
 
 <body>
 
-  <!-- <div id="sideNavigation" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">Home</a>
-    <a href="#">About Me</a>
-    <a href="#"></a>
-  </div>
-
-  <nav class="topnav">
-    <a href="#" onclick="openNav()">
-      <svg width="30" height="30" id="icoOpen">
-          <path d="M0,5 30,5" stroke="#000" stroke-width="5"/>
-          <path d="M0,14 30,14" stroke="#000" stroke-width="5"/>
-          <path d="M0,23 30,23" stroke="#000" stroke-width="5"/>
-      </svg>
-    </a>
-  </nav>
-
-  <div id="main"> -->
 
     <h1>My Art Portfolio</h1>
 
@@ -43,6 +22,11 @@
   <p>
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, and digital art. My artwork will be organized by my oldest at the bottom and my latest at the top.
   </p>
+
+  <div class="caption">
+    <img class="centered myImg" src="img/logo.png" alt="Self Portrait 2018" />
+    <div>Name: Self Portrait 2018 <br /> Medium: Copic Markers <br /> Date: 3/17/18</div>
+  </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/miguel-coco.png" alt="Drawing of Miguel in the movie Coco" />
@@ -191,7 +175,6 @@
 <script>
 // Get the modal
 var modal = document.getElementById('myModal');
-
 // Get the image and insert it inside the modal - use its "alt" text as a caption
 var img = $('.myImg');
 var modalImg = $("#img01");
@@ -203,23 +186,6 @@ $('.myImg').click(function(){
     captionText.innerHTML = this.alt;
 });
 
-// // Get the <span> element that closes the modal
-// var span = document.getElementsByClassName("close")[0];
-//
-// // When the user clicks on <span> (x), close the modal
-// span.onclick = function() {
-//   modal.style.display = "none";
-// }
-//
-// function openNav() {
-//     document.getElementById("sideNavigation").style.width = "250px";
-//     document.getElementById("main").style.marginLeft = "250px";
-// }
-//
-// function closeNav() {
-//     document.getElementById("sideNavigation").style.width = "0";
-//     document.getElementById("main").style.marginLeft = "0";
-// }
 </script>
 
 <footer>
