medium self portrait change

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/logo.png" alt="Self Portrait 2018" />
-    <div>Name: Self Portrait 2018 <br /> Medium: Copic Markers <br /> Date: 3/17/18</div>
+    <div>Name: Self Portrait 2018 <br /> Medium: Digital <br /> Date: 3/17/18</div>
   </div>
 
   <div class="caption">
