--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ $('.myImg').click(function(){
 </script>
 
 <footer>
-<img style="float: left; margin-left: 10%; margin-bottom: 5%;" class="centered myImg" src="img/logo5.png" alt="Logo" />
+<img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/logo5.png" alt="Logo" />
 
 <p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
 <i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
