--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/girl-portrait.png" alt="Drawing of a Girl in a sweater" />
-    <div>Name: A Girl in a Sweater <br /> Medium: Copic Markers, Colored Pencils <br /> Date: 1/5/18</div>
+    <div>Name: A Girl in a Sweater <br /> Medium: Mixed Media <br /> Date: 1/5/18</div>
   </div>
 
   <div class="caption">
