added girl with headphones

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   </p>
 
   <div class="caption">
+    <img class="centered myImg" src="img/headphone-girl.png" alt="Girl with Headphones" />
+    <div>Name: Gril with Headphones <br /> Medium: Copic Markers <br /> Date: 3/20/18</div>
+  </div>
+
+  <div class="caption">
     <img class="centered myImg" src="img/logo.png" alt="Self Portrait 2018" />
     <div>Name: Self Portrait 2018 <br /> Medium: Digital <br /> Date: 3/17/18</div>
   </div>
