--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
 
-
+  <div class="header">
     <h1>My Artwork</h1>
-
-
+  </div>
 
   <h2>Introduction</h2>
 
   <p>
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic Markers, Acrilic Paint, Watercolors, and digital art. My artwork will be organized by my oldest at the bottom and my latest at the top.
+    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My artwork will be organized by my oldest at
+    the bottom and my latest at the top.
   </p>
 
   <h2>2018</h2>
 
   <div class="caption">
-    <img class="centered myImg" src="img/headphone-girl.png" alt="Girl with Headphones"  />
+    <img class="centered myImg" src="img/headphone-girl.png" alt="Girl with Headphones" />
     <div>Name: Gril with Headphones <br /> Medium: Copic Markers <br /> Date: 3/20/18</div>
   </div>
 
@@ -50,10 +50,10 @@
   </div>
 
 
-    <div class="caption">
-      <img class="centered myImg" src="img/spock-cat.png" alt="Drawing of a Spock as a Cat" />
-      <div>Name: Spock as a Cat <br /> Medium: Digital <br /> Date: 3/1/18</div>
-    </div>
+  <div class="caption">
+    <img class="centered myImg" src="img/spock-cat.png" alt="Drawing of a Spock as a Cat" />
+    <div>Name: Spock as a Cat <br /> Medium: Digital <br /> Date: 3/1/18</div>
+  </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/blue-cat.png" alt="Drawing of a Grey Cat" />
@@ -72,7 +72,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/noah-schnapp.png" alt="Drawing of Noah Schnapp" />
-    <div>Name: Noah Schnapp <br /> Medium: Copic Markers <br />  Date: 2/6/18</div>
+    <div>Name: Noah Schnapp <br /> Medium: Copic Markers <br /> Date: 2/6/18</div>
   </div>
 
   <div class="caption">
@@ -87,7 +87,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/monochrome-girl.png" alt="Drawing of a monochrome girl" />
-    <div>Name: Monochrome Girl <br /> Medium: Acrilic Paint with water <br /> Date: 1/29/18</div>
+    <div>Name: Monochrome Girl <br /> Medium: Acrylic Paint with water <br /> Date: 1/29/18</div>
   </div>
 
   <div class="caption">
@@ -102,7 +102,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/sunset-trees.png" alt="Drawing of a sunset" />
-    <div>Name: A Sunset <br /> Medium: Acrilic Paint <br /> Date: 1/21/18</div>
+    <div>Name: A Sunset <br /> Medium: Acrylic Paint <br /> Date: 1/21/18</div>
   </div>
 
   <div class="caption">
@@ -112,7 +112,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/galaxy.png" alt="Drawing of a Galaxy" />
-    <div>Name: A Galaxy <br /> Medium: Acrilic Paint <br /> Date: 1/3/18</div>
+    <div>Name: A Galaxy <br /> Medium: Acrylic Paint <br /> Date: 1/3/18</div>
   </div>
 
   <div class="caption">
@@ -122,10 +122,10 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/dark-painting.png" alt="Drawing of The Night Sky" />
-    <div>Name: Trees and a Night Sky <br /> Medium: Acrilic Paint <br /> Date: 1/1/18</div>
+    <div>Name: Trees and a Night Sky <br /> Medium: Acrylic Paint <br /> Date: 1/1/18</div>
   </div>
 
-<h2>2017</h2>
+  <h2>2017</h2>
 
   <div class="caption">
     <img class="centered myImg" src="img/eleven2.png" alt="Drawing of Eleven" />
@@ -144,12 +144,12 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie" />
-    <div>Name: Mike with Walkie Talkie (Stranger Things) <br /> Medium: Copic Markers <br />  Date: 12/16/17</div>
+    <div>Name: Mike with Walkie Talkie (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
   </div>
 
   <div class="caption">
     <img class="centered myImg" src="img/barb.png" alt="Drawing of Barb" />
-    <div>Name: Barb (Stranger Things) <br /> Medium: Copic Markers <br />  Date: 12/10/17</div>
+    <div>Name: Barb (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <div class="caption">
@@ -163,48 +163,47 @@
   </div>
 
   <!-- The Modal -->
-<div id="myModal" class="modal">
+  <div id="myModal" class="modal">
 
-  <!-- The Close Button -->
-  <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+    <!-- The Close Button -->
+    <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
 
-  <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
 
-  <!-- Modal Caption (Image Text) -->
-  <div id="caption"></div>
-</div>
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+  </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-// Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = $('.myImg');
-var modalImg = $("#img01");
-var captionText = document.getElementById("caption");
-$('.myImg').click(function(){
-    modal.style.display = "block";
-    var newSrc = this.src;
-    modalImg.attr('src', newSrc);
-    captionText.innerHTML = this.alt;
-});
+  <script>
+    // Get the modal
+    var modal = document.getElementById('myModal');
+    // Get the image and insert it inside the modal - use its "alt" text as a caption
+    var img = $('.myImg');
+    var modalImg = $("#img01");
+    var captionText = document.getElementById("caption");
+    $('.myImg').click(function() {
+      modal.style.display = "block";
+      var newSrc = this.src;
+      modalImg.attr('src', newSrc);
+      captionText.innerHTML = this.alt;
+    });
+  </script>
 
-</script>
+  <footer>
+    <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/logo5.png" alt="Logo" />
 
-<footer>
-<img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/logo5.png" alt="Logo" />
+    <p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
+      <i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
+      <i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
+    </p>
+  </footer>
 
-<p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
-<i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
-<i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
-</p>
-</footer>
+  <p style="float: left; margin-left: 20%;">
+    &copy; 2018 Serendipity Art, All rights reserved.
+  </p>
 
-<p style="float: left; margin-left: 20%;">
-&copy; 2018 Serendipity Art, All rights reserved.
-</p>
-
-</div>
+  </div>
 </body>
 
 </html>
