--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <p>
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My artwork will be organized by my oldest at
-    the bottom and my latest at the top. I hope you enjoy it!
+    the bottom and my latest at the top. <br /> I hope you enjoy it!
   </p>
 
   <h2>2018</h2>
@@ -128,38 +128,38 @@
   <h2>2017</h2>
 
   <div class="caption">
-    <img class="centered myImg" src="img/eleven2.png" alt="Drawing of Eleven" />
-    <div>Name: Eleven with ling hair (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/26/17</div>
+    <img class="centered myImg" src="img/eleven2.png" alt="Drawing of Eleven (Stranger Things)" />
+    <div>Name: Eleven with ling hair <br /> Medium: Copic Markers <br /> Date: 12/26/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/lucas.png" alt="Drawing of Lucas" />
-    <div>Name: Lucas (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/25/17</div>
+    <img class="centered myImg" src="img/lucas.png" alt="Drawing of Lucas (Stranger Things)" />
+    <div>Name: Lucas <br /> Medium: Copic Markers <br /> Date: 12/25/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/dustin.png" alt="Drawing of Dustin" />
-    <div>Name: Dustin (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/19/17</div>
+    <img class="centered myImg" src="img/dustin.png" alt="Drawing of Dustin (Stranger Things)" />
+    <div>Name: Dustin <br /> Medium: Copic Markers <br /> Date: 12/19/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie" />
-    <div>Name: Mike with Walkie Talkie (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
+    <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie (Stranger Things)" />
+    <div>Name: Mike with Walkie Talkie <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/barb.png" alt="Drawing of Barb" />
-    <div>Name: Barb (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
+    <img class="centered myImg" src="img/barb.png" alt="Drawing of Barb (Stranger Things)" />
+    <div>Name: Barb <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/eleven1.png" alt="Drawing of Eleven" />
-    <div>Name: Eleven (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
+    <img class="centered myImg" src="img/eleven1.png" alt="Drawing of Eleven (Stranger Things)" />
+    <div>Name: Eleven <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <div class="caption">
-    <img class="centered myImg" src="img/mike1.png" alt="Drawing of Mike Wheeler" />
-    <div>Name: Mike (Stranger Things) <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
+    <img class="centered myImg" src="img/mike1.png" alt="Drawing of Mike Wheeler (Stranger Things)" />
+    <div>Name: Mike <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
   <!-- The Modal -->
