--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption">
+    <img class="centered myImg" src="img/evan-hansen.png" alt="Evan Hansen from Dear Evan Hansen"  />
+    <div>Name: Evan Hansen <br /> Medium: Digital <br /> Date: 3/28/18</div>
+  </div>
+
+  <div class="caption">
     <img class="centered myImg" src="img/okoye.png" alt="Okoye from Black Panther"  />
     <div>Name: Okoye <br /> Medium: Copic Markers <br /> Date: 3/22/18</div>
   </div>
