added connor murphy

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
   <h2>2018</h2>
 
   <div class="caption">
-    <img class="centered myImg" src="img/evan-hansen.png" alt="Evan Hansen from Dear Evan Hansen"  />
+    <img class="centered myImg" src="img/connor-murphy.png" alt="Connor Murphy from the musical Dear Evan Hansen"  />
+    <div>Name: Connor Murphy <br /> Medium: Digital <br /> Date: 3/31/18</div>
+  </div>
+
+  <div class="caption">
+    <img class="centered myImg" src="img/evan-hansen.png" alt="Evan Hansen from the musical Dear Evan Hansen"  />
     <div>Name: Evan Hansen <br /> Medium: Digital <br /> Date: 3/28/18</div>
   </div>
 
