added guitar girl

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption">
+    <img class="centered myImg" src="img/girl-guitar.png" alt="Girl with a Guitar"  />
+    <div>Name: Girl with a Guitar <br /> Medium: Digital <br /> Date: 4/12/18</div>
+  </div>
+
+  <div class="caption">
     <img class="centered myImg" src="img/connor-murphy.png" alt="Connor Murphy from the musical Dear Evan Hansen"  />
     <div>Name: Connor Murphy <br /> Medium: Digital <br /> Date: 3/31/18</div>
   </div>
