added girl with short curly hair

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   <h2>2018</h2>
 
   <div class="caption">
+    <img class="centered myImg" src="img/girl-short-hair.png" alt="Girl with Short Curly Hair"  />
+    <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/12/18</div>
+  </div>
+
+
+  <div class="caption">
     <img class="centered myImg" src="img/girl-guitar.png" alt="Girl with a Guitar"  />
     <div>Name: Girl with a Guitar <br /> Medium: Digital <br /> Date: 4/12/18</div>
   </div>
