--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
   <h2>2018</h2>
 
   <div class="caption">
+    <img class="centered myImg" src="img/girl-purple-hair.png" alt="Girl with Purple Hair"  />
+    <div>Name: Girl With Purple Hair <br /> Medium: Digital <br /> Date: 4/20/18</div>
+  </div>
+
+  <div class="caption">
     <img class="centered myImg" src="img/girl-short-hair.png" alt="Girl with Short Curly Hair"  />
-    <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/12/18</div>
+    <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/16/18</div>
   </div>
 
 
