--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <div class="caption">
     <img class="centered myImg" src="img/girl-purple-hair.png" alt="Girl with Purple Hair"  />
-    <div>Name: Girl With Purple Hair <br /> Medium: Digital <br /> Date: 4/20/18</div>
+    <div>Name: Girl With Purple Hair <br /> Medium: Copic Markers <br /> Date: 4/20/18</div>
   </div>
 
   <div class="caption">
