fixed pic margins

--- a/index.html
+++ b/index.html
@@ -24,174 +24,176 @@
 
   <h2>2018</h2>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-purple-hair.png" alt="Girl with Purple Hair"  />
     <div>Name: Girl With Purple Hair <br /> Medium: Copic Markers <br /> Date: 4/20/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-short-hair.png" alt="Girl with Short Curly Hair"  />
     <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/16/18</div>
   </div>
 
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-guitar.png" alt="Girl with a Guitar"  />
     <div>Name: Girl with a Guitar <br /> Medium: Digital <br /> Date: 4/12/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/connor-murphy.png" alt="Connor Murphy from the musical Dear Evan Hansen"  />
     <div>Name: Connor Murphy <br /> Medium: Digital <br /> Date: 3/31/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/evan-hansen.png" alt="Evan Hansen from the musical Dear Evan Hansen"  />
     <div>Name: Evan Hansen <br /> Medium: Digital <br /> Date: 3/28/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/okoye.png" alt="Okoye from Black Panther"  />
     <div>Name: Okoye <br /> Medium: Copic Markers <br /> Date: 3/22/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/headphone-girl.png" alt="Girl with Headphones"  />
     <div>Name: Gril with Headphones <br /> Medium: Copic Markers <br /> Date: 3/20/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/logo.png" alt="Self Portrait 2018" />
     <div>Name: Self Portrait 2018 <br /> Medium: Digital <br /> Date: 3/17/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/miguel-coco.png" alt="Drawing of Miguel in the movie Coco" />
     <div>Name: Miguel from the movie Coco <br /> Medium: Copic Markers <br /> Date: 3/12/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-purplrsweater.png" alt="Drawing of a Girl in a Purple Sweater" />
     <div>Name: Girl in a Purple Sweater <br /> Medium: Copic Markers <br /> Date: 3/10/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/luke-catwalker.png" alt="Drawing of a Luke Skywalker as a Cat" />
     <div>Name: Luke Catwalker <br /> Medium: Digital <br /> Date: 3/4/18</div>
   </div>
 
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/spock-cat.png" alt="Drawing of a Spock as a Cat" />
     <div>Name: Spock as a Cat <br /> Medium: Digital <br /> Date: 3/1/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/blue-cat.png" alt="Drawing of a Grey Cat" />
     <div>Name: Grey Cat <br /> Medium: Digital <br /> Date: 2/25/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/purple-cat.png" alt="Drawing of a Purple Cat" />
     <div>Name: Purple Cat <br /> Medium: Digital <br /> Date: 2/25/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/lee-loo.png" alt="Drawing of Lee Loo" />
     <div>Name: Lee Loo <br /> Medium: Copic Markers <br /> Date: 2/7/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/noah-schnapp.png" alt="Drawing of Noah Schnapp" />
     <div>Name: Noah Schnapp <br /> Medium: Copic Markers <br /> Date: 2/6/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/drawing-girl.png" alt="Drawing of a girl with glasses" />
     <div>Name: A Girl with Glasses <br /> Medium: Copic Markers <br /> Date: 2/4/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-drawing.png" alt="Drawing of a girl pink hair" />
     <div>Name: A Girl with Pink Hair <br /> Medium: Copic Markers <br /> Date: 1/31/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/monochrome-girl.png" alt="Drawing of a monochrome girl" />
     <div>Name: Monochrome Girl <br /> Medium: Acrylic Paint with water <br /> Date: 1/29/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/shape-girl.png" alt="Drawing of a Girl with Geometric hair" />
     <div>Name: Girl with Geometric Hair <br /> Medium: Copic Markers <br /> Date: 1/27/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/bubbles.png" alt="Drawing of Bubbles" />
     <div>Name: Bubbles <br /> Medium: Colored Pencils <br /> Date: 1/25/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/sunset-trees.png" alt="Drawing of a sunset" />
     <div>Name: A Sunset <br /> Medium: Acrylic Paint <br /> Date: 1/21/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-portrait.png" alt="Drawing of a Girl in a sweater" />
     <div>Name: A Girl in a Sweater <br /> Medium: Mixed Media <br /> Date: 1/5/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/galaxy.png" alt="Drawing of a Galaxy" />
     <div>Name: A Galaxy <br /> Medium: Acrylic Paint <br /> Date: 1/3/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/colored-space.png" alt="Drawing of Blue and Red Space" />
     <div>Name: Blue and Red Space <br /> Medium: Acrlic Paint <br /> Date: 1/3/18</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/dark-painting.png" alt="Drawing of The Night Sky" />
     <div>Name: Trees and a Night Sky <br /> Medium: Acrylic Paint <br /> Date: 1/1/18</div>
   </div>
 
   <h2>2017</h2>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/eleven2.png" alt="Drawing of Eleven (Stranger Things)" />
     <div>Name: Eleven with ling hair <br /> Medium: Copic Markers <br /> Date: 12/26/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/lucas.png" alt="Drawing of Lucas (Stranger Things)" />
     <div>Name: Lucas <br /> Medium: Copic Markers <br /> Date: 12/25/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/dustin.png" alt="Drawing of Dustin (Stranger Things)" />
     <div>Name: Dustin <br /> Medium: Copic Markers <br /> Date: 12/19/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie (Stranger Things)" />
     <div>Name: Mike with Walkie Talkie <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/barb.png" alt="Drawing of Barb (Stranger Things)" />
     <div>Name: Barb <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/eleven1.png" alt="Drawing of Eleven (Stranger Things)" />
     <div>Name: Eleven <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
 
-  <div class="caption">
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/mike1.png" alt="Drawing of Mike Wheeler (Stranger Things)" />
     <div>Name: Mike <br /> Medium: Copic Markers <br /> Date: 12/10/17</div>
   </div>
+
+
 
   <!-- The Modal -->
   <div id="myModal" class="modal">
