--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <div>Name: Girl With Purple Hair <br /> Medium: Copic Markers <br /> Date: 4/20/18</div>
   </div>
 
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/girl-short-hair.png" alt="Girl with Short Curly Hair"  />
+    <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/16/18</div>
+  </div>
+
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-guitar.png" alt="Girl with a Guitar"  />
