--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <p>
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My artwork will be organized by my oldest at
-    the bottom and my latest at the top. Hope you like it!
+    the bottom and my latest at the top. <br /> Hope you like it!
   </p>
 
   <h2>2018</h2>
