added fixed luke cat

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
     <div>Name: Girl in a Purple Sweater <br /> Medium: Copic Markers <br /> Date: 3/10/18</div>
   </div>
 
-
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/luke-catwalker.png" alt="Drawing of a Luke Skywalker as a Cat" />
+    <div>Name: Luke Catwalker <br /> Medium: Digital <br /> Date: 3/4/18</div>
+  </div>
 
 
   <div class="caption pic-margin">
