--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/ben-platt.png" alt="Ben Platt"  />
+    <div>Name: Ben Platt <br /> Medium: Digital <br /> Date: 4/21/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/girl-purple-hair.png" alt="Girl with Purple Hair"  />
     <div>Name: Girl With Purple Hair <br /> Medium: Copic Markers <br /> Date: 4/20/18</div>
   </div>
