--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/ben-platt.png" alt="Ben Platt"  />
+    <img class="centered myImg" src="img/ben-platt-1.png" alt="Ben Platt"  />
     <div>Name: Ben Platt <br /> Medium: Digital <br /> Date: 4/21/18</div>
   </div>
 
