--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/eleven2.png" alt="Drawing of Eleven (Stranger Things)" />
-    <div>Name: Eleven with ling hair <br /> Medium: Copic Markers <br /> Date: 12/26/17</div>
+    <div>Name: Eleven <br /> Medium: Copic Markers <br /> Date: 12/26/17</div>
   </div>
 
   <div class="caption pic-margin">
@@ -180,7 +180,7 @@
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/mike2.png" alt="Drawing of Mike with Walkie Talkie (Stranger Things)" />
-    <div>Name: Mike with Walkie Talkie <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
+    <div>Name: Mike <br /> Medium: Copic Markers <br /> Date: 12/16/17</div>
   </div>
 
   <div class="caption pic-margin">
