--- a/index.html
+++ b/index.html
@@ -25,43 +25,43 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/ben-platt-1.png" alt="Ben Platt"  />
+    <img class="centered myImg" src="img/ben-platt-1.png" alt="Drawing of Ben Platt"  />
     <div>Name: Ben Platt <br /> Medium: Digital <br /> Date: 4/21/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/girl-purple-hair.png" alt="Girl with Purple Hair"  />
+    <img class="centered myImg" src="img/girl-purple-hair.png" alt="Drawing of a Girl with Purple Hair"  />
     <div>Name: Girl With Purple Hair <br /> Medium: Copic Markers <br /> Date: 4/20/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/girl-short-hair.png" alt="Girl with Short Curly Hair"  />
+    <img class="centered myImg" src="img/girl-short-hair.png" alt="Drawing of a Girl with Short Curly Hair"  />
     <div>Name: Girl With Short Curly Hair <br /> Medium: Digital <br /> Date: 4/16/18</div>
   </div>
 
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/girl-guitar.png" alt="Girl with a Guitar"  />
+    <img class="centered myImg" src="img/girl-guitar.png" alt=" Drawing of a Girl with a Guitar"  />
     <div>Name: Girl with a Guitar <br /> Medium: Digital <br /> Date: 4/12/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/connor-murphy.png" alt="Connor Murphy from the musical Dear Evan Hansen"  />
+    <img class="centered myImg" src="img/connor-murphy.png" alt="Drawing of Connor Murphy (Dear Evan Hansen)"  />
     <div>Name: Connor Murphy <br /> Medium: Digital <br /> Date: 3/31/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/evan-hansen.png" alt="Evan Hansen from the musical Dear Evan Hansen"  />
+    <img class="centered myImg" src="img/evan-hansen.png" alt="Drawing of Evan Hansen (Dear Evan Hansen)"  />
     <div>Name: Evan Hansen <br /> Medium: Digital <br /> Date: 3/28/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/okoye.png" alt="Okoye from Black Panther"  />
+    <img class="centered myImg" src="img/okoye.png" alt=" Drawing of Okoye (Black Panther)"  />
     <div>Name: Okoye <br /> Medium: Copic Markers <br /> Date: 3/22/18</div>
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/headphone-girl.png" alt="Girl with Headphones"  />
+    <img class="centered myImg" src="img/headphone-girl.png" alt="Drawing of a Girl with Headphones"  />
     <div>Name: Gril with Headphones <br /> Medium: Copic Markers <br /> Date: 3/20/18</div>
   </div>
 
@@ -71,7 +71,7 @@
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/miguel-coco.png" alt="Drawing of Miguel in the movie Coco" />
+    <img class="centered myImg" src="img/miguel-coco.png" alt="Drawing of Miguel (Coco)" />
     <div>Name: Miguel from the movie Coco <br /> Medium: Copic Markers <br /> Date: 3/12/18</div>
   </div>
 
