added foggy day img

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/foggy-day.png" alt="Drawing of a foggy day"  />
+    <div>Name: Foggy Day <br /> Medium: Digital <br /> Date: 4/24/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/ben-platt-1.png" alt="Drawing of Ben Platt"  />
     <div>Name: Ben Platt <br /> Medium: Digital <br /> Date: 4/21/18</div>
   </div>
