added anne wheeler

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/anne-wheeler.png" alt="Drawing of Anne Wheeler (The Greatest Showman)"  />
+    <div>Name: Anne Wheeler <br /> Medium: Digital <br /> Date: 5/3/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/foggy-day.png" alt="Drawing of a foggy day"  />
     <div>Name: Foggy Day <br /> Medium: Digital <br /> Date: 4/24/18</div>
   </div>
