added wwoman, lettie, gamora

--- a/index.html
+++ b/index.html
@@ -24,9 +24,24 @@
 
   <h2>2018</h2>
 
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/wonder-woman.png" alt="Drawing of Wonder Woman"  />
+    <div>Name: Wonder Woman <br /> Medium: Copic Markers <br /> Date: 5/6/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/lettie-lutz.png" alt="Drawing of Lettie Lutz (The Greatest Showman)"  />
+    <div>Name: Lettie Lutz <br /> Medium: Copic Markers <br /> Date: 5/5/18</div>
+  </div>
+
     <div class="caption pic-margin">
       <img class="centered myImg" src="img/anne-wheeler.png" alt="Drawing of Anne Wheeler (The Greatest Showman)"  />
       <div>Name: Anne Wheeler <br /> Medium: Digital <br /> Date: 5/3/18</div>
+    </div>
+
+    <div class="caption pic-margin">
+      <img class="centered myImg" src="img/gamora.png" alt="Drawing of Gamora (Guardians of the Galaxy)"  />
+      <div>Name: Gamora <br /> Medium: Copic Markers <br /> Date: 4/29/18</div>
     </div>
 
   <div class="caption pic-margin">
