--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/la-la-land.png" alt="Drawing of Mia and Sebastian (La La Land)"  />
+    <div>Name: Mia and Sebastian <br /> Medium: Digital <br /> Date: 6/3/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/wonder-woman.png" alt="Drawing of Wonder Woman"  />
     <div>Name: Wonder Woman <br /> Medium: Copic Markers <br /> Date: 5/6/18</div>
   </div>
