--- a/index.html
+++ b/index.html
@@ -11,18 +11,27 @@
 
 <body>
 
+<div class="text">
+
   <div class="header">
-    <h1>My Artwork</h1>
+    <h1>My Drawings</h1>
   </div>
+
+<hr />
 
   <h2>Introduction</h2>
 
   <p>
-    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My artwork will be organized by my oldest at
+    I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My drawings will be organized by my oldest at
     the bottom and my latest at the top. <br /> Hope you like it!
   </p>
 
   <h2>2018</h2>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/bug-starship.png" alt="Drawing of Bug (Starship)"  />
+    <div>Name: Bug <br /> Medium: Digital <br /> Date: 6/24/18</div>
+  </div>
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/la-la-land3.png" alt="Drawing of Mia and Sebastian (La La Land)"  />
@@ -258,12 +267,14 @@
     });
   </script>
 
+
+
   <footer>
-    <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/logo5.png" alt="Logo" />
+    <img style="float: left; margin-left: 10%; margin-bottom: 5%;" src="img/logo.png" alt="Logo" />
 
     <p style="float: left; margin-left: 2%; text-align: left; margin-top: 2%;">
-      <i style="color: red;" class="fa fa-youtube-play"></i> <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank">Check out my YouTube Channel!</a> <br /> <br />
-      <i style="color: black;" class="fa fa-github"></i> <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
+      <a style="color: white;" href="https://www.youtube.com/channel/UCd8rYD8fTziiAdknnVe99gg?disable_polymer=true" target="_blank"><br /> <br />Check out my YouTube Channel!</a> <br /> <br />
+      <a style="color: white;" href="https://github.com/NerdyKittyProgrammer" target="_blank"> Check out my GitHub!</a>
     </p>
   </footer>
 
@@ -272,6 +283,7 @@
   </p>
 
   </div>
+</div>
 </body>
 
 </html>
