--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <h2>Introduction</h2>
 
-  <p>
+  <p style="margin-top: 50px;">
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My drawings will be organized by my oldest at
     the bottom and my latest at the top. <br /> Hope you like it!
   </p>
