--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/bug-starship.png" alt="Drawing of Bug (Starship)"  />
+    <img class="centered myImg" src="img/bug-starship2.png" alt="Drawing of Bug (Starship)"  />
     <div>Name: Bug <br /> Medium: Digital <br /> Date: 6/24/18</div>
   </div>
 
