--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/bill-potts.png" alt="Drawing of Bill Potts (Doctor Who)"  />
+    <div>Name: Bill Potts <br /> Medium: Copic Markers <br /> Date: 7/17/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/bandana-girl.png" alt="Drawing of a Girl with a Bandana"  />
+    <div>Name: Girl With a Bandana <br /> Medium: Copic Markers <br /> Date: 7/13/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/hp-gril.png" alt="Drawing of a Harry Potter Looking Girl"  />
+    <div>Name: Harry Potter Looking Girl <br /> Medium: Copic Markers <br /> Date: 7/9/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/bug-starship2.png" alt="Drawing of Bug (Starship)"  />
     <div>Name: Bug <br /> Medium: Digital <br /> Date: 6/24/18</div>
   </div>
@@ -34,6 +49,21 @@
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/la-la-land3.png" alt="Drawing of Mia and Sebastian (La La Land)"  />
     <div>Name: Mia and Sebastian <br /> Medium: Digital <br /> Date: 6/3/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/Lauren.png" alt="Drawing of Lauren"  />
+    <div>Name: Lauren <br /> Medium: Copic Markers <br /> Date: 6/1/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/me.png" alt="Drawing of Me"  />
+    <div>Name: Me <br /> Medium: Copic Markers <br /> Date: 5/26/18</div>
+  </div>
+
+  <div class="caption pic-margin">
+    <img class="centered myImg" src="img/Sarah.png" alt="Drawing of Sarah"  />
+    <div>Name: Sarah <br /> Medium: Copic Markers <br /> Date: 5/15/18</div>
   </div>
 
   <div class="caption pic-margin">
@@ -109,7 +139,7 @@
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/miguel-coco.png" alt="Drawing of Miguel (Coco)" />
-    <div>Name: Miguel from the movie Coco <br /> Medium: Copic Markers <br /> Date: 3/12/18</div>
+    <div>Name: Miguel  <br /> Medium: Copic Markers <br /> Date: 3/12/18</div>
   </div>
 
   <div class="caption pic-margin">
