--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/hp-gril.png" alt="Drawing of a Harry Potter Looking Girl"  />
-    <div>Name: Harry Potter Looking Girl <br /> Medium: Copic Markers <br /> Date: 7/9/18</div>
+    <img class="centered myImg" src="img/hp-gril.png" alt="Drawing of a Girl with Round Glasses"  />
+    <div>Name: Girl with Round Glasses <br /> Medium: Copic Markers <br /> Date: 7/9/18</div>
   </div>
 
   <div class="caption pic-margin">
