--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 
     <div class="caption pic-margin">
-      <img class="centered myImg" src="img/anne-wheeler.png" alt="Drawing of Anne Wheeler (The Greatest Showman)"  />
+      <img class="centered myImg" src="img/anne-wheeler-2.png" alt="Drawing of Anne Wheeler (The Greatest Showman)"  />
       <div>Name: Anne Wheeler <br /> Medium: Digital <br /> Date: 5/3/18</div>
     </div>
 
