--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <div class="caption pic-margin">
-    <img class="centered myImg" src="img/Lauren.png" alt="Drawing of Lauren"  />
+    <img class="centered myImg" src="img/lauren.png" alt="Drawing of Lauren"  />
     <div>Name: Lauren <br /> Medium: Copic Markers <br /> Date: 6/1/18</div>
   </div>
 
