--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   <h2>2018</h2>
 
   <div class="caption pic-margin">
+    <img class="centered myImg" src="img/newt-scamander.png" alt="Drawing of Newt Scamander (Fantastic Beasts)"  />
+    <div>Name: Newt Scamander <br /> Medium: Digital <br /> Date: 7/24/18</div>
+  </div>
+
+  <div class="caption pic-margin">
     <img class="centered myImg" src="img/bill-potts.png" alt="Drawing of Bill Potts (Doctor Who)"  />
     <div>Name: Bill Potts <br /> Medium: Copic Markers <br /> Date: 7/17/18</div>
   </div>
