changed margin to %

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   </div>
 
   <a href="drawings.html">
-    <img class="centered myImg" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 300px; margin-top: 200px; margin-bottom: 50px;">
+    <img class="myImg" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 30%; margin-top: 10%; margin-bottom: 5%;">
   </a>
 
   <a href="music.html">
-    <img class="centered myImg" src="img/my-music-button.png" alt="My Music" style="margin: 300px; margin-top: 0px; margin-bottom: 50px;">
+    <img class="myImg" src="img/my-music-button.png" alt="My Music" style="margin: 30%; margin-top: 0px; margin-bottom: 5%;">
   </a>
 
-<img src="img/profile-pic-6.png" style="margin: 70px; margin-top: 0px;">
+<img src="img/profile-pic-6.png" style="margin: 7%; margin-top: 0px;">
 
 </body>
 
