--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
 <div class="text">
 
-  <div class="header">
+  <div class="header2">
     <h1>Welcome To My Art Portfolio!</h1>
   </div>
 
   <a href="drawings.html">
-    <img class="myImg" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 30%; margin-top: 12%; margin-bottom: 5%;">
+    <img class="myImg2" src="img/my-drawings-button.png" alt="My Drawings" style="margin: 30%; margin-top: 12%; margin-bottom: 5%;">
   </a>
 
   <a href="music.html">
-    <img class="myImg" src="img/my-music-button.png" alt="My Music" style="margin: 30%; margin-top: 0px; margin-bottom: 5%;">
+    <img class="myImg2" src="img/my-music-button.png" alt="My Music" style="margin: 30%; margin-top: 0px; margin-bottom: 5%;">
   </a>
 
 <img src="img/profile-pic-6.png" style="margin: 7%; margin-top: 0px;">
