--- a/drawings.html
+++ b/drawings.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <title>Serendipity Art</title>
   <link rel="icon" href="img/profile-pic-6.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -27,9 +28,7 @@
     I draw a number of different things, but I usually draw portaits or sometimes landscapes. I use all kinds of different mediums for my art such as Copic markers, acrylic paint, watercolors, and digital art. My drawings will be organized by my oldest at
     the bottom and my latest at the top. <br /> Hope you like it!
   </p>
-
   <h2>2018</h2>
-
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/newt-scamander.png" alt="Drawing of Newt Scamander (Fantastic Beasts)"  />
     <div>Name: Newt Scamander <br /> Medium: Digital <br /> Date: 7/24/18</div>
@@ -55,10 +54,6 @@
     <div>Name: Bug <br /> Medium: Digital <br /> Date: 6/24/18</div>
   </div>
 
-  <div class="caption pic-margin">
-    <img class="centered myImg" src="img/la-la-land3.png" alt="Drawing of Mia and Sebastian (La La Land)"  />
-    <div>Name: Mia and Sebastian <br /> Medium: Digital <br /> Date: 6/3/18</div>
-  </div>
 
   <div class="caption pic-margin">
     <img class="centered myImg" src="img/lauren.png" alt="Drawing of Lauren"  />
