--- a/music.html
+++ b/music.html
@@ -32,8 +32,9 @@
   </p>
 
 
+
 <div style="margin-bottom: 10%;">
-<div style="float: left; margin-left: 15%;">
+<div style="float: left; margin-left: 9%;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <p>Click the download button to download chord sheet.</p>
   <a href="img/blobfishsongchordsheet.pdf" download>
@@ -41,13 +42,14 @@
   </a>
 </div>
 
+<div style="margin-right: 5%;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3894C2AB8xA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <p>Click the download button to download chord sheet.</p>
+  <p style="text-align: center;">Click the download button to download chord sheet.</p>
   <a href="img/thewayIdo-chordsheet.pdf" download>
     <button class="btn"><i class="fa fa-download"></i> Download</button>
   </a>
 </div>
-
+</div>
 
 
 
