--- a/music.html
+++ b/music.html
@@ -36,20 +36,21 @@
 <div style="margin-bottom: 10%;">
 <div style="float: left; margin-left: 9%;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8Trz2rLKh0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <p>Click the download button to download chord sheet.</p>
+  <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
   <a href="img/blobfishsongchordsheet.pdf" download>
     <button class="btn"><i class="fa fa-download"></i> Download</button>
   </a>
 </div>
 
-<div style="margin-right: 5%;">
+<div style="margin-bottom: 10%;">
+<div style="float: left; margin-left: 5%;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3894C2AB8xA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <p style="text-align: center;">Click the download button to download chord sheet.</p>
+  <div style="text-align: center;"><p>Click the download button to download chord sheet.</p></div>
   <a href="img/thewayIdo-chordsheet.pdf" download>
     <button class="btn"><i class="fa fa-download"></i> Download</button>
   </a>
 </div>
-</div>
+
 
 
 
